style.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
}
/* Buttton */

.btn {
  border: none;
  background: #e02c6d;
  border-radius: 41px;
  color: #ffffff;
  padding: 10px 24px;
  font-size: 16px;
  font-weight: 700;
}

.fa-arrow-right {
  margin-left: 8px;
}

.container {
  max-width: 1280px;
  margin: 0 auto;
}

/* Header Start */

.header {
  margin-top: 75px;
}

.navbar {
  display: flex;
  justify-content: space-between;
}

.site-title h2 {
  font-size: 24px;
  font-weight: 700;
}

.nav-menu-list {
  display: flex;
}

.nav-menu-list li {
  list-style: none;
  margin-left: 34px;
}
.nav-menu-list li a {
  text-decoration: none;
  color: #3a3a3a;
  font-weight: 600;
}

/* Header End */

/* Banner Start */
.banner {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 130px;
  align-items: center;
  margin-top: 50px;
  margin-bottom: 70px;
}

.banner-info h1 {
  font-size: 52px;
}

.banner-info p {
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  color: #3a3a3a;
  margin: 16px 0px;
}

.banner-image img {
  width: 80%;
}

/* Banner End */

/* Feature Company Start*/

.feature-company-showcase {
  display: flex;
  justify-content: space-evenly;
  align-items: center;

  /* display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-column-gap: 60px; */
  margin: 40px;
  align-items: center;
}

hr {
  border: 1px solid #f5f3f3;
}

/* Feature Company End */

